Add EngineClient::recent() and example

--- a/examples/1/composer.json
+++ b/examples/1/composer.json
@@ -1,5 +1,6 @@
 {
   "require": {
-    "sajari/sajari-sdk-php": "dev-master"
+    "sajari/sajari-sdk-php": "dev-master",
+    "monolog/monolog": "~1.13"
   }
 }
