--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "guzzle/guzzle": "~3.7"
+    "guzzle/guzzle": "~3.7",
+    "symfony/http-foundation": "~2.6"
   },
   "require-dev": {},
   "autoload": {
