--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
     "guzzle/guzzle": "~3.7",
     "symfony/http-foundation": "~2.6"
   },
-  "require-dev": {},
+  "require-dev": {
+    "phpunit/phpunit": "^4.7"
+  },
   "autoload": {
     "psr-0": {
       "Sajari": "src/"
