Updated proto, switched to ssl, fixed namespacing
Some modifications were made to the generated proto. The Deserialize
function was added to the response messages because they weren’t being
found. I assume this is because the implementation of Message has
changed, and one of the libraries is not in sync.

--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,13 @@
     }
   ],
   "require": {
+    "php": ">=5.5.0",
+    "ext-grpc": "0.1.0",
     "grpc/grpc": "dev-release-0_14"
   },
   "autoload": {
     "psr-0": {
-      "Sajari": "src/"
+      "Sajari\\": "src/"
     }
   },
   "minimum-stability": "dev",
