Update grpc version

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
   "require": {
     "php": ">=5.5.0",
     "ext-grpc": "0.1.0",
-    "grpc/grpc": "dev-release-0_14"
+    "grpc/grpc": "v0.15.2"
   },
   "autoload": {
     "psr-0": {
