Change to MIT license

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "search"
   ],
   "type": "library",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "authors": [
     {
       "name": "Sajari",
