--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,9 @@
     "ext-grpc": "0.1.0",
     "grpc/grpc": "v0.15.2"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^4.8"
+  },
   "autoload": {
     "psr-0": {
       "Sajari\\": "src/"
