--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "grpc/grpc": "v0.15.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.8"
+    "phpunit/phpunit": "^4.8",
+    "phpdocumentor/phpdocumentor": "2.*"
   },
   "autoload": {
     "psr-0": {
