fix buggy ObjectSerializer map deserialization

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,8 +9,7 @@
 >
     <testsuites>
         <testsuite name="tests">
-            <directory>./test/Api</directory>
-            <directory>./test/Model</directory>
+            <directory>./test</directory>
         </testsuite>
     </testsuites>
     <filter>
