--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "sajari/sdk-php",
+  "version": "3.0.1",
   "description": "Sajari is a smart, highly-configurable, real-time search service that enables thousands of businesses worldwide to provide amazing search experiences on their websites, stores, and applications.",
   "keywords": [
     "sajari",
